...

private val basicBlockTiles = listOf(
    BasicBlockTileItem(
        type = BasicBlockType.PARAGRAPH,
        labelRes = R.string.basic_blocks_text_label,
        descriptionRes = R.string.basic_blocks_text_description,
        testTag = "basic_blocks_text",
        icon = Icons.AutoMirrored.Outlined.Notes
    ),
    BasicBlockTileItem(
        type = BasicBlockType.HEADING_1,
        labelRes = R.string.basic_blocks_heading_1_label,
        descriptionRes = R.string.basic_blocks_heading_1_description,
        testTag = "basic_blocks_heading_1",
        icon = Icons.Outlined.Title
    ),
    BasicBlockTileItem(
        type = BasicBlockType.HEADING_2,
        labelRes = R.string.basic_blocks_heading_2_label,
        descriptionRes = R.string.basic_blocks_heading_2_description,
...
